tests/paczka1/fuzzy1/62936651.err
Error in line 2: TJeJNQe S667 91,6
Error in line 9: Ees0 A3 09,5
Error in line 7: BlUaQ07 S667 50,0
Error in line 11: A3 A3 22,7
Error in line 5: Ees0 A3 29,2
Error in line 14: A3 A3 87,4
Error in line 15: A3 A929 93,1
Error in line 6: t7HnSK A929 76,1
Error in line 16: t7HnSK S667 98,0
Error in line 17: t7HnSK S526 98,8
Error in line 22: BlUaQ07 S526 100,1
Error in line 31: A3 A929 235,5
Error in line 34: A3 A3 14,9
Error in line 25: BlUaQ07 A929 8,7
Error in line 36: BlUaQ07 S667 29,9
